# skills

./: .codespellrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ac-adopting-ruff/: SKILL.md
ac-adopting-ruff/references/: compatible-formatting.md  dangerous-auto-fixes.md
ac-adopting-ruff/scripts/: cli.py  discover_violations.py  scan_queue.py
ac-auditing-repos/: SKILL.md
ac-django/: SKILL.md
ac-django/references/: admin-and-drf.md  antipatterns.md  background-and-infra.md  models-and-schema.md  testing-and-tooling.md  transactions-and-migrations.md  troubleshooting.md  views-and-templates.md
ac-editing-acroforms/: SKILL.md
ac-editing-acroforms/examples/: field_rect_realignment.json  single_text_position_shift.json
ac-editing-acroforms/scripts/: add_row.py  apply_content_stream_replacements.py  apply_rect_updates.py  cli.py  golden_diff.py  inspect_fields.py  set_field_flags.py  sync_sibling_bars.py  verify_field_alignment.py  verify_paired_bars.py
ac-generating-slides/: SKILL.md
ac-generating-slides/scripts/: cli.py
ac-managing-repos/: SKILL.md
ac-managing-repos/scripts/: cli.py
ac-openclaw/: SKILL.md
ac-openclaw/references/: channel-setup.md  docker-compose.yml  hetzner-servers.md  installation-phases.md  local-models.md  multi-agent-routing.md  security-hardening.md  server-config-template.md  social-media.md
ac-python/: SKILL.md
ac-python/references/: oop-and-design.md  style-and-typing.md  testing-and-tooling.md
ac-reviewing-skills/: SKILL.md
ac-reviewing-skills/references/: quality-principles.md  skill-authoring-best-practices.md
ac-reviewing-skills/scripts/: check_frontmatter.py  cli.py
ac-scaffolding-skill-repos/: SKILL.md
ac-scaffolding-skill-repos/references/: templates.md
ac-scaffolding-skill-repos/references/templates/: .markdownlint-cli2.yaml  README.md.template  SKILL.md.template  ci.yml  pre-commit-config.yaml  pyproject.toml  test-matrix.sh
ac-writing-blog-posts/: SKILL.md
ac-writing-blog-posts/references/: devto-publishing.md  promotion.md  publish-devto.yml
scripts/: update_readme_skills.py
scripts/hooks/: check-banned-terms.sh
tests/: conftest.py  test_check_skills.py
tests/ac-editing-acroforms/: conftest.py  test_generic_helpers.py  test_golden_diff.py
tests/ac-editing-acroforms/fixtures/: create_test_pdfs.py
tests/ac-managing-repos/: test_cli.py
